--- a/paginas/entrevista-toscano.html
+++ b/paginas/entrevista-toscano.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="../imagenes/logo.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Indie Post - Entrevista con Pablo Toscano</title>
 </head>
 
@@ -60,12 +60,12 @@
         </div>
       </nav>
     <main>
-        <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
-        <img src="../css/pablotoscano.png" alt="Foto Pablo Toscano">
-        <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
-            compañía Frima
-            Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
-            más importantes del 2018, el Assassin’s Creed Odyssey.
+        <h1 class="titulo">Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
+        <img class="foto" src="../css/pablotoscano.png" alt="Foto Pablo Toscano">
+        <p class="epigrafe">Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+          compañía Frima
+          Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+          más importantes del 2018, el Assassin’s Creed Odyssey.
         </p>
         <br>
         <p class="pregunta">¿Qué significa el nuevo juego de Assassin’s Creed para vos?</p>
@@ -103,12 +103,12 @@
         <p class="pregunta">¿Recomendarías el Assassin’s Creed para gente que nunca estuvo metida en el mundo de los
             videojuegos?</p>
         <p class="respuesta">Para los que no conocen la industria de los videojuegos, Assassin’s Creed Odyssey es una
-            excelente posibilidad para empezar a jugar. Tenemos una historia en la cual parte del entretenimiento está
-            en encontrar personajes históricos de la antigua Grecia y vivir una simulación con un nivel de realismo
-            impresionante y con un detalle de lo que son los elementos históricos como nunca vimos en otro tipo de
-            juego. También está la experiencia de poder viajar en el tiempo y ser un ateniense o un espartano y poder
-            mirar esta “realidad virtual” con los ojos de alguien que está descubriendo por primera vez Atenas o
-            Esparta.</p>
+          excelente posibilidad para empezar a jugar. Tenemos una historia en la cual parte del entretenimiento está
+          en encontrar personajes históricos de la antigua Grecia y vivir una simulación con un nivel de realismo
+          impresionante y con un detalle de lo que son los elementos históricos como nunca vimos en otro tipo de
+          juego. También está la experiencia de poder viajar en el tiempo y ser un ateniense o un espartano y poder
+          mirar esta “realidad virtual” con los ojos de alguien que está descubriendo por primera vez Atenas o
+          Esparta.</p>
     </main>
     <footer>
         <div class="footloose">
