--- a/index.html
+++ b/index.html
@@ -22,43 +22,40 @@
   <header>
     <a href="index.html"><img class="logo__pagina" src="./imagenes/logo.png" alt="logo"></a>
   </header>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="./Index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link dropdown-toggle menu__nav" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false" href="#">Tecnología</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item menu__dropdown" href="./paginas/tops.html">Tops</a></li>
-              <li><a class="dropdown-item menu__dropdown" href="./paginas/entrevistas.html">Entrevistas</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="./paginas/cultura.html">Cultura</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="./paginas/sociedad.html">Sociedad</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="./paginas/deportes.html">Deportes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="./paginas/contacto.html">Contacto</a>
-          </li>
-        </ul>
-        <form class="d-flex barra__busqueda">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="boton__busqueda" type="submit">Search</button>
-        </form>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle menu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Tecnología
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="./paginas/entrevistas.html">Entrevistas</a></li>
+            <li><a class="dropdown-item" href="./paginas/tops.html">Tops</a></li>
+          </ul>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+        </li>
+      </ul>
     </div>
   </nav>
   <main>
@@ -159,29 +156,29 @@
       </div>
     </a>
     <a href="./paginas/nota-boxeo.html" class="animate__animated animate__fadeIn  wow">
-    <div class="card nota__boxeo">
-      <div class="card-img-overlay">
-        <div class="card-text">
-          <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
-          <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
-            olímpicos como mundiales.
-          </p>
+      <div class="card nota__boxeo">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
+            <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
+              olímpicos como mundiales.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
     </a>
     <a href="./paginas/nota-tops.html" class="animate__animated animate__fadeIn  wow">
-    <div class="card nota__tops">
-      <div class="card-img-overlay">
-        <div class="card-text">
-          <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
-          <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
-            de deportes como el "Fifa", de
-            carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
-            es un recorrido por los 5 simuladores más extraños en los videojuegos.</p>
+      <div class="card nota__tops">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
+            <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
+              de deportes como el "Fifa", de
+              carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
+              es un recorrido por los 5 simuladores más extraños en los videojuegos.</p>
+          </div>
         </div>
       </div>
-    </div>
     </a>
     <a href="./paginas/nota-siria.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__siria">
