--- a/paginas/entrevistas.html
+++ b/paginas/entrevistas.html
@@ -24,41 +24,40 @@
   <header>
     <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
   </header>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
-              <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
-          </li>
-        </ul>
-        <form class="d-flex barra__busqueda">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="boton__busqueda" type="submit">Search</button>
-        </form>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle menu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Tecnología
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="./paginas/entrevistas.html">Entrevistas</a></li>
+            <li><a class="dropdown-item" href="./paginas/tops.html">Tops</a></li>
+          </ul>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+        </li>
+      </ul>
     </div>
   </nav>
   <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
@@ -78,24 +77,24 @@
   </a>
   <footer>
     <div class="footloose">
-        <p>Indie Post, un medio creado por un periodista independiente.</p>
-        <p>Todos los derechos reservados</p>
+      <p>Indie Post, un medio creado por un periodista independiente.</p>
+      <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
-        <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-                src="../imagenes/iconos/iconofacebook.png" alt="facebook">
-        </a>
-        <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-                src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
-        </a>
-        <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-                src="../imagenes/iconos/iconotwitter.png" alt="twitter">
-        </a>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp"
-                src="../imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp">
-        </a>
+      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+          src="../imagenes/iconos/iconofacebook.png" alt="facebook">
+      </a>
+      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+          src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
+      </a>
+      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+          src="../imagenes/iconos/iconotwitter.png" alt="twitter">
+      </a>
+      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png"
+          alt="IconoWhatsapp">
+      </a>
     </div>
-</footer>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
     crossorigin="anonymous"></script>
