--- a/paginas/entrevista-toscano.html
+++ b/paginas/entrevista-toscano.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Entrevista con Pablo Toscano en Indie Post, un medio periodístico independiente.">
@@ -19,116 +19,117 @@
 </head>
 
 <body>
-    <header>
-        <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
-      </header>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
-                  <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
-              </li>
-            </ul>
-            <form class="d-flex barra__busqueda">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="boton__busqueda" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    <main>
-        <h1 class="titulo">Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
-        <img class="foto" src="../css/pablotoscano.png" alt="Foto Pablo Toscano">
-        <p class="epigrafe">Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
-          compañía Frima
-          Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
-          más importantes del 2018, el Assassin’s Creed Odyssey.
-        </p>
-        <br>
-        <p class="pregunta">¿Qué significa el nuevo juego de Assassin’s Creed para vos?</p>
-        <p class="respuesta">Assasssin’s Creed Odyssey trajo un gusto distinto a mi carrera porque cuando estábamos
-            desarrollando este juego pudimos sentir algo especial y de muy buena calidad.</p>
-        <p class="pregunta">¿Cómo ingresaste al mundo del desarrollo de videojuegos?</p>
-        <p class="respuesta">Cuando emigré de Argentina hacia Quebec en 2003, me fui con conocimientos bastante
-            generales de lo que es el 3D, de hecho, en Argentina lo usaba mucho para la arquitectura que fue lo que
-            estudié. Cuando llegué a Canadá me pude deconstruir y pensar en qué quería seguir haciendo con esto y la
-            industria de los videojuegos me ofrece todo lo que me interesa que es tecnología y arte.</p>
-        <p class="pregunta">¿Cómo es el sistema de juego de este título?</p>
-        <p class="respuesta">En este episodio de Assassin’s Creed, tenemos la elección del personaje como pilar
-            principal. El jugador puede elegir si quiere jugar con Cassandra o con Alexios, un personaje femenino y otro
-            masculino; es la priemra vez en la historia de la licencia que hacemos esto. Una vez que el jugador va
-            ganando experiencia con el personaje elegido, cada decisión o cada interacción con el universo va a marcar
-            un nuevo destino, a tal punto que van a poder encontrarse con Sócrates o algún griego de la época y la
-            respuesta que se le de va a alterar totalmente la experiencia de juego llegando al punto de poder tener
-            varios finales diferentes en los que el personaje se va construyendo a medida que pasa el tiempo.
-            Dependiendo de las decisiones, el personaje va a ser más oscuro o más “luminoso” según las posturas que
-            vayas tomando a lo largo del juego.</p>
-        <video class="trailer" src="../videos/AC Odyssey trailer.mp4" type="video/mp4" controls>No se puede reproducir
-            el archivo</video>
-        <p class="pregunta">¿Qué diferencias tiene con otros títulos de la saga?</p>
-        <p class="respuesta">Tenemos muchas cosas distintas con los juegos anteriores. Por ejemplo, el mapa es del doble
-            que el del Assassin’s Creed Origins –juego lanzado en 2017-, tenemos una variedad de ecosistemas
-            impresionantes, biomas donde hay islas volcánicas, montañas, nieve, los atardeceres son magníficos, bosques.
-            También agregamos el photomode, un modo en el cual podemos sacar fotos durante el juego, que creemos que
-            sirve para demostrar un poco la belleza del juego y el buen trabajo que se hizo durante el desarrollo. Yendo
-            más a la experiencia más propia de juego, el hecho de poder elegir un personaje marca una diferencia con
-            respecto a todo lo que se hizo antes. Todo lo que es el sistema naval, tanto de navegación como de batallas
-            fue completamente rehecho y le agregamos un sistema de reclutamiento que vuelve más interesante al juego,
-            poder ir caminando por Atenas o por Esparta y ver algún personaje que interesa ya sea por la armadura o por
-            sus habilidades y poder reclutarlo. Cada personaje que veas que te parezca interesante se puede reclutar y
-            verlo en el barco aumentando las capacidades de tu embarcación.</p>
-        <p class="pregunta">¿Recomendarías el Assassin’s Creed para gente que nunca estuvo metida en el mundo de los
-            videojuegos?</p>
-        <p class="respuesta">Para los que no conocen la industria de los videojuegos, Assassin’s Creed Odyssey es una
-          excelente posibilidad para empezar a jugar. Tenemos una historia en la cual parte del entretenimiento está
-          en encontrar personajes históricos de la antigua Grecia y vivir una simulación con un nivel de realismo
-          impresionante y con un detalle de lo que son los elementos históricos como nunca vimos en otro tipo de
-          juego. También está la experiencia de poder viajar en el tiempo y ser un ateniense o un espartano y poder
-          mirar esta “realidad virtual” con los ojos de alguien que está descubriendo por primera vez Atenas o
-          Esparta.</p>
-    </main>
-    <footer>
-        <div class="footloose">
-            <p>Indie Post, un medio creado por un periodista independiente.</p>
-            <p>Todos los derechos reservados</p>
-        </div>
-        <div class="redes">
-            <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-                    src="../imagenes/iconos/iconofacebook.png" alt="facebook">
-            </a>
-            <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-                    src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
-            </a>
-            <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-                    src="../imagenes/iconos/iconotwitter.png" alt="twitter">
-            </a>
-            <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp"
-                    src="../imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp">
-            </a>
-        </div>
-    </footer>
+  <header>
+    <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
+  </header>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle menu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Tecnología
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="./paginas/entrevistas.html">Entrevistas</a></li>
+            <li><a class="dropdown-item" href="./paginas/tops.html">Tops</a></li>
+          </ul>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
+        </li>
+        <li class="nav-item menu">
+          <a class="nav-link" href="./paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <main>
+    <h1 class="titulo">Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
+      pasada</h1>
+    <img class="foto" src="../css/pablotoscano.png" alt="Foto Pablo Toscano">
+    <p class="epigrafe">Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+      compañía Frima
+      Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+      más importantes del 2018, el Assassin’s Creed Odyssey.
+    </p>
+    <br>
+    <p class="pregunta">¿Qué significa el nuevo juego de Assassin’s Creed para vos?</p>
+    <p class="respuesta">Assasssin’s Creed Odyssey trajo un gusto distinto a mi carrera porque cuando estábamos
+      desarrollando este juego pudimos sentir algo especial y de muy buena calidad.</p>
+    <p class="pregunta">¿Cómo ingresaste al mundo del desarrollo de videojuegos?</p>
+    <p class="respuesta">Cuando emigré de Argentina hacia Quebec en 2003, me fui con conocimientos bastante
+      generales de lo que es el 3D, de hecho, en Argentina lo usaba mucho para la arquitectura que fue lo que
+      estudié. Cuando llegué a Canadá me pude deconstruir y pensar en qué quería seguir haciendo con esto y la
+      industria de los videojuegos me ofrece todo lo que me interesa que es tecnología y arte.</p>
+    <p class="pregunta">¿Cómo es el sistema de juego de este título?</p>
+    <p class="respuesta">En este episodio de Assassin’s Creed, tenemos la elección del personaje como pilar
+      principal. El jugador puede elegir si quiere jugar con Cassandra o con Alexios, un personaje femenino y otro
+      masculino; es la priemra vez en la historia de la licencia que hacemos esto. Una vez que el jugador va
+      ganando experiencia con el personaje elegido, cada decisión o cada interacción con el universo va a marcar
+      un nuevo destino, a tal punto que van a poder encontrarse con Sócrates o algún griego de la época y la
+      respuesta que se le de va a alterar totalmente la experiencia de juego llegando al punto de poder tener
+      varios finales diferentes en los que el personaje se va construyendo a medida que pasa el tiempo.
+      Dependiendo de las decisiones, el personaje va a ser más oscuro o más “luminoso” según las posturas que
+      vayas tomando a lo largo del juego.</p>
+    <video class="trailer" src="../videos/AC Odyssey trailer.mp4" type="video/mp4" controls>No se puede reproducir
+      el archivo</video>
+    <p class="pregunta">¿Qué diferencias tiene con otros títulos de la saga?</p>
+    <p class="respuesta">Tenemos muchas cosas distintas con los juegos anteriores. Por ejemplo, el mapa es del doble
+      que el del Assassin’s Creed Origins –juego lanzado en 2017-, tenemos una variedad de ecosistemas
+      impresionantes, biomas donde hay islas volcánicas, montañas, nieve, los atardeceres son magníficos, bosques.
+      También agregamos el photomode, un modo en el cual podemos sacar fotos durante el juego, que creemos que
+      sirve para demostrar un poco la belleza del juego y el buen trabajo que se hizo durante el desarrollo. Yendo
+      más a la experiencia más propia de juego, el hecho de poder elegir un personaje marca una diferencia con
+      respecto a todo lo que se hizo antes. Todo lo que es el sistema naval, tanto de navegación como de batallas
+      fue completamente rehecho y le agregamos un sistema de reclutamiento que vuelve más interesante al juego,
+      poder ir caminando por Atenas o por Esparta y ver algún personaje que interesa ya sea por la armadura o por
+      sus habilidades y poder reclutarlo. Cada personaje que veas que te parezca interesante se puede reclutar y
+      verlo en el barco aumentando las capacidades de tu embarcación.</p>
+    <p class="pregunta">¿Recomendarías el Assassin’s Creed para gente que nunca estuvo metida en el mundo de los
+      videojuegos?</p>
+    <p class="respuesta">Para los que no conocen la industria de los videojuegos, Assassin’s Creed Odyssey es una
+      excelente posibilidad para empezar a jugar. Tenemos una historia en la cual parte del entretenimiento está
+      en encontrar personajes históricos de la antigua Grecia y vivir una simulación con un nivel de realismo
+      impresionante y con un detalle de lo que son los elementos históricos como nunca vimos en otro tipo de
+      juego. También está la experiencia de poder viajar en el tiempo y ser un ateniense o un espartano y poder
+      mirar esta “realidad virtual” con los ojos de alguien que está descubriendo por primera vez Atenas o
+      Esparta.</p>
+  </main>
+  <footer>
+    <div class="footloose">
+      <p>Indie Post, un medio creado por un periodista independiente.</p>
+      <p>Todos los derechos reservados</p>
+    </div>
+    <div class="redes">
+      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+          src="../imagenes/iconos/iconofacebook.png" alt="facebook">
+      </a>
+      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+          src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
+      </a>
+      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+          src="../imagenes/iconos/iconotwitter.png" alt="twitter">
+      </a>
+      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png"
+          alt="IconoWhatsapp">
+      </a>
+    </div>
+  </footer>
 </body>
+
 </html>
