Arreglé los links del menú

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle menu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -43,21 +43,21 @@
             Tecnología
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./paginas/entrevistas.html">Entrevistas</a></li>
-            <li><a class="dropdown-item" href="./paginas/tops.html">Tops</a></li>
+            <li><a class="dropdown-item" href="../paginas/entrevistas.html">Entrevistas</a></li>
+            <li><a class="dropdown-item" href="../paginas/tops.html">Tops</a></li>
           </ul>
         </li>
         <li class="nav-item menu">
-          <a class="nav-link" href="./paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
+          <a class="nav-link" href="../paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
         </li>
         <li class="nav-item menu">
-          <a class="nav-link" href="./paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
+          <a class="nav-link" href="../paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
         </li>
         <li class="nav-item menu">
-          <a class="nav-link" href="./paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
+          <a class="nav-link" href="../paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
         </li>
         <li class="nav-item menu">
-          <a class="nav-link" href="./paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+          <a class="nav-link" href="../paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
         </li>
       </ul>
     </div>
