--- a/paginas/nota-siria.html
+++ b/paginas/nota-siria.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="../imagenes/logo.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Indie Post - La guerra en Siria</title>
 </head>
 
