Le di clases a las cosas

--- a/paginas/nota-arsenico.html
+++ b/paginas/nota-arsenico.html
@@ -60,10 +60,10 @@
         </div>
     </nav>
     <main>
-        <h6>Especial de investigación</h6>
-        <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
-        <img src="../css/carlos-casares.jpg" alt="Entrada de Carlos Casares">
-        <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
+        <h6 class="encabezado">Especial de investigación</h6>
+        <h1 class="titulo">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
+        <img class="foto-casares" src="../css/carlos-casares.jpg" alt="Entrada de Carlos Casares">
+        <p class="epigrafe">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
             Casares y
             Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
             tóxico.
