Agregué la clase créditos

--- a/paginas/nota-arsenico.html
+++ b/paginas/nota-arsenico.html
@@ -68,6 +68,7 @@
             Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
             tóxico.
         </p>
+        <p class="creditos">Por: Tomás Aronna San Martín</p>
         <p>
             Agua. Algo esencial que todos necesitamos para el desarrollo de nuestras vidas. Sin ella ningún ser humano
             podría subsistir. En algunos lugares de nuestro país el agua se encuentra contaminada por arsénico, un
