Agregué la clase créditos y le di estilo

--- a/paginas/entrevista-toscano.html
+++ b/paginas/entrevista-toscano.html
@@ -67,7 +67,9 @@
       Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
       más importantes del 2018, el Assassin’s Creed Odyssey.
     </p>
-    <br>
+    <p class="creditos">
+      Por: Tomás Aronna San Martín
+    </p>
     <p class="pregunta">¿Qué significa el nuevo juego de Assassin’s Creed para vos?</p>
     <p class="respuesta">Assasssin’s Creed Odyssey trajo un gusto distinto a mi carrera porque cuando estábamos
       desarrollando este juego pudimos sentir algo especial y de muy buena calidad.</p>
