--- a/paginas/nota-gardel.html
+++ b/paginas/nota-gardel.html
@@ -60,8 +60,9 @@
         </div>
     </nav>
     <main>
-        <h1>La casa del tango</h1>
-        <img src="../css/casa-gardel.png" alt="Entrada del museo Casa Carlos Gardel">
+        <h1 class="titulo">La casa del tango</h1>
+        <img class="foto" src="../css/casa-gardel.png" alt="Entrada del museo Casa Carlos Gardel">
+        <p class="creditos">Por: Tomás Aronna San Martín</p>
         <p>
             Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
             reapertura.
