--- a/paginas/nota-arsenico.html
+++ b/paginas/nota-arsenico.html
@@ -62,7 +62,7 @@
     <main>
         <h6 class="encabezado">Especial de investigación</h6>
         <h1 class="titulo">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
-        <img class="foto-casares" src="../css/carlos-casares.jpg" alt="Entrada de Carlos Casares">
+        <img class="foto" src="../css/carlos-casares.jpg" alt="Entrada de Carlos Casares">
         <p class="epigrafe">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
             Casares y
             Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
