Le di clase a las cosas

--- a/paginas/nota-boxeo.html
+++ b/paginas/nota-boxeo.html
@@ -59,11 +59,12 @@
         </div>
     </nav>
     <main>
-        <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
-        <img src="../css/almagro-boxing.png" alt="Entrada de Almagro Boxing Club">
-        <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
+        <h1 class="titulo">Almagro Boxing Club: una verdadera cuna de campeones</h1>
+        <img class="foto" src="../css/almagro-boxing.png" alt="Entrada de Almagro Boxing Club">
+        <p class="epigrafe">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
             olímpicos como mundiales.
         </p>
+        <p class="creditos">Por: Tomás Aronna San Martín</p>
         <p>
             “Una hora más en el club, una hora menos en la calle”. Ese es el lema del mítico Almagro Boxing Club, lugar
             de donde salieron grandes pugilistas desde su fundación, el 30 de abril de 1923.
