Le di clases a las cosas

--- a/paginas/nota-boxeo.html
+++ b/paginas/nota-boxeo.html
@@ -100,7 +100,7 @@
             en forma amateur; en ese carácter, esta disciplina cuentan con protecciones adicionales para cuidar más al
             deportista, aparte de tener rounds más cortos.
         </p>
-        <h2>
+        <h2 class="recuadro">
             “El toro salvaje de las pampas”
         </h2>
         <p>
@@ -114,7 +114,7 @@
             pelea por nocaut. En el segundo round, Dempsey tiró a Firpo por tercera vez y el árbitro frenó la pelea
             declarando al norteamericano campeón por dejar al argentino fuera de combate.
         </p>
-        <video src="../videos/Firpo vs Dempsey.mp4" type="video/mp4" controls>No se puede reproducir el archivo</video>
+        <video class="video-recuadro" src="../videos/Firpo vs Dempsey.mp4" type="video/mp4" controls>No se puede reproducir el archivo</video>
     </main>
     <footer>
         <div class="footloose">
