Le di clases a las cosas

--- a/paginas/nota-tops.html
+++ b/paginas/nota-tops.html
@@ -60,16 +60,17 @@
         </div>
     </nav>
     <main>
-        <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
-        <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
+        <h1 class="titulo">Los simuladores más extraños en el mundo de los videojuegos</h1>
+        <p class="epigrafe">En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
             de deportes como el "Fifa", de
             carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
             es un recorrido por los 5 simuladores más extraños en los videojuegos.
         </p>
+        <p class="creditos">Por: Tomás Aronna San Martín</p>
         <ol>
             <li>
-                Goat Simulator
-                <img src="../css/goat-simulator.jpg" alt="Portada de Goat Simulator">
+                <h3 class="titulo">Goat Simulator</h3>
+                <img class="foto" src="../css/goat-simulator.jpg" alt="Portada de Goat Simulator">
                 <p> Probablemente el simulador más conocido dentro de esta lista. Saltó a la fama en 2014 por su
                     particular premisa, el jugador encarna una cabra cuyo objetivo es causar la mayor cantidad de
                     destrozos posible e, incluso, golpeando humanos. También se pueden hacer acrobacias, andar en
@@ -79,8 +80,8 @@
                 </p>
             </li>
             <li>
-                Hatoful Boyfriend
-                <img src="../css/Hatoful-Boyfriend.jpg" alt="Portada de Hatoful Boyfriend">
+               <h3 class="titulo">Hatoful Boyfriend</h3> 
+                <img class="foto" src="../css/Hatoful-Boyfriend.jpg" alt="Portada de Hatoful Boyfriend">
                 <p>
                     Hatoful Boyfriend, también conocido como Pigeon Dating Simulator, es una novela visual japonesa en
                     la cual el jugador toma control de una humana que fue recientemente aceptada en el prestigioso
@@ -93,8 +94,8 @@
                 </p>
             </li>
             <li>
-                Adolf Hitler Humiliation Simulator
-                <img src="../css/Hitler-Simulator.jpg" alt="Portada de Adolf Hitler Humiliation Simulator">
+                <h3 class="titulo">Adolf Hitler Humiliation Simulator</h3>
+                <img class="foto" src="../css/Hitler-Simulator.jpg" alt="Portada de Adolf Hitler Humiliation Simulator">
                 <p>
                     Tal y como su nombre dice, el objetivo de este bizarro simulador es humillar al líder del Tercer
                     Reich. Su principal método de humillación es orinar encima del Führer desde varios ángulos y
@@ -103,8 +104,8 @@
                 </p>
             </li>
             <li>
-                Tree Simulator
-                <img src="../css/Tree-Simulator.jpg" alt="Árbol dentro del juego">
+                <h3 class="titulo">Tree Simulator</h3>
+                <img class="foto" src="../css/Tree-Simulator.jpg" alt="Árbol dentro del juego">
                 <p>
                     En este simulador somos literalmente un árbol. Su objetivo es relajarse y desfrutar de ser un árbol
                     mientras pasa el tiempo. Existen distintos tipos de árboles que el jugador puede elegir. Algo para
@@ -115,8 +116,8 @@
                 </p>
             </li>
             <li>
-                Sitting Simulator
-                <img src="../css/Sitting-Simulator.jpg" alt="Menú Sitting Simulator">
+                <h3 class="titulo">Sitting Simulator</h3>
+                <img class="foto" src="../css/Sitting-Simulator.jpg" alt="Menú Sitting Simulator">
                 <p>
                     Al igual que con el Tree Simulator, el Sitting Simulator cuenta con 2 versiones diferentes en Steam,
                     la de 2014 y la de 2015. En este simulador el objetivo del jugador será sentarse, las opciones de
