Cambié las imagenes del carrusel y linkee lasnotas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </ul>
     </div>
   </nav>
-  <main>
+  <section>
     <div id="carouselExampleCaptions" class="carousel slide slider__carrusel" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -70,7 +70,9 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" class="d-block w-100 notas" alt="Foto Pablo Toscano">
+          <a href="./paginas/entrevista-toscano.html">
+            <img src="./imagenes/toscano-carrusel.png" class="d-block w-100 notas" alt="Foto Pablo Toscano">
+          </a>
           <div class="carousel-caption d-none d-md-block texto__carrusel">
             <h5>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
               pasada</h5>
@@ -81,17 +83,19 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./imagenes/museo_casa_carlos_gardel_9.jpg" class="d-block w-100 notas"
-            alt="Entrada Museo Casa Gardel">
-          <div class="carousel-caption d-none d-md-block texto-carrusel texto__gardel">
+          <a href="./paginas/nota-gardel.html">
+            <img src="./imagenes/pasillo-gardel.png" class="d-block w-100 notas" alt="Entrada Museo Casa Gardel">
+          </a>
+          <div class="carousel-caption d-none d-md-block texto__carrusel">
             <h5>La casa del tango</h5>
             <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
               reapertura.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg" class="d-block w-100 notas"
-            alt="Entrada Carlos Casares">
+          <a href="./paginas/nota-arsenico.html">
+            <img src="./imagenes/casares.png" class="d-block w-100 notas" alt="Entrada Carlos Casares">
+          </a>
           <div class="carousel-caption d-none d-md-block texto__carrusel">
             <h5>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h5>
             <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
@@ -112,7 +116,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-  </main>
+  </section>
   <section class="grid">
     <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__toscano">
@@ -135,8 +139,7 @@
           <div class="card-text">
             <h2>La casa del tango</h2>
             <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
-              reapertura.
-            </p>
+              reapertura.</p>
           </div>
         </div>
       </div>
@@ -145,7 +148,7 @@
       <div class="card nota__arsenico">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
+            <h2>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h2>
             <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
               Casares y
               Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
@@ -159,7 +162,7 @@
       <div class="card nota__boxeo">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
+            <h2>Almagro Boxing Club: una verdadera cuna de campeones</h2>
             <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
               olímpicos como mundiales.
             </p>
@@ -171,7 +174,7 @@
       <div class="card nota__tops">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
+            <h2>Los simuladores más extraños en el mundo de los videojuegos</h2>
             <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
               de deportes como el "Fifa", de
               carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
@@ -184,7 +187,7 @@
       <div class="card nota__siria">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>La guerra en Siria</h1>
+            <h2>La guerra en Siria</h2>
             <p>El conflicto bélico en Siria parece no tener fin tras 10 años de enfrentamiento.</p>
           </div>
         </div>
